Separate and organize

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script src="./rcolor.js"></script>
 
   <!-- These are our own scripts, which allow us to organize our project and improve readability and maintainability -->
-  <script src="./engines.js"></script>
-  <script src="./stockEngines.js"></script>
+  <script src="./engines.js"></script> <!-- JSON for custom engines -->
+  <script src="./stockEngines.js"></script> <!-- JSON for stock engines -->
   <title>NTR Engine Plot</title>
 </head>
 <style type="text/css">
@@ -40,6 +40,7 @@
       <span>\( \frac{radius (px)}{1}\ = \sqrt{ \frac{\pi \cdot diameter \cdot height}{2}\ } \)</span>
       <span>\( \frac{border (px)}{1}\ = \max{( \sqrt{\frac{cost (c)}{1000}}, 0.5)} \)</span>
     </div>
+    <div id="legend-container-0" class="legend-container"></div>
     <canvas id="engineChart0" width="400" height="400"></canvas>
   </div>
   <hr>
@@ -49,6 +50,7 @@
       <span>\( \frac{radius (px)}{2}\ = \sqrt{ \frac{\pi \cdot diameter \cdot height}{2}\ } \)</span>
       <span>\( \frac{border (px)}{2}\ = \max{( \sqrt{\frac{cost (c)}{1000}}, 0.5)} \)</span>
     </div>
+    <div id="legend-container-1" class="legend-container"></div>
     <canvas id="engineChart1" width="400" height="400"></canvas>
   </div>
   <hr>
@@ -58,112 +60,13 @@
       <span>\( \frac{radius (px)}{10}\ = \sqrt{ \frac{\pi \cdot diameter \cdot height}{2}\ } \)</span>
       <span>\( \frac{border (px)}{10}\ = \max{( \sqrt{\frac{cost (c)}{1000}}, 0.5)} \)</span>
     </div>
+    <div id="legend-container-2" class="legend-container"></div>
     <canvas id="engineChart2" width="400" height="400"></canvas>
   </div>
-  <script>
 
-var color = new RColor;
-var radj = 100000; // Volume, in m3
-var yadj = 0.001; // Weight, in Tonnes
-
-var data0 = {datasets: []};
-var data1 = {datasets: []};
-var data2 = {datasets: []};
-
-window.sizes = [];
-
-var addEngine = function( data ) {
-  var radius = Math.PI * data.diameter / 2 * data.height;
-  radius = Math.pow( radius, 0.5 ) * 10;
-
-  var bdw = Math.pow( Math.max( data.cost / 1000, 0.5 ), 0.5 );
-
-  var twr = data.thrust / ( data.weight * 9.807 );
-
-  if ( radius > 100 ) {
-    radius = radius / 10;
-    bdw = bdw / 10;
-    dataset = window.data0;
-  } else if ( radius > 10 ) {
-    radius = radius / 5;
-    bdw = bdw / 5;
-    dataset = window.data1;
-    console.log( data );
-  } else {
-    radius = radius;
-    bdw = bdw;
-    dataset = window.data2;
-  }
-
-  dataset.datasets.push({
-    label: data.label,
-    data: [{
-      x: twr,
-      y: data.thrust,
-      r: radius,
-    }],
-    backgroundColor: data.color,
-    borderColor: 'black',
-    borderWidth: bdw,
-  });
-}
-
-for (var i = engines.length - 1; i >= 0; i--) {
-  var curr = engines[i];
-  if ( typeof curr.color != undefined ) curr.color = color.get(true, 0.9, 0.85);
-  addEngine( curr );
-}
-
-for (var i = stockEngines.length - 1; i >= 0; i--) {
-  var curr = stockEngines[i];
-  if ( typeof curr.color != undefined ) curr.color = color.get(true, 0.10, 0.85);
-  addEngine( curr );
-}
-
-var options = {
-  layout: {
-    padding: 10,
-  },
-  scales: {
-    xAxes: [{
-      ticks: {
-        callback: function( value ) {
-          return value + ' g0 ';
-        }
-      }
-    }],
-    yAxes: [{
-      type: 'logarithmic',
-      ticks: {
-        callback: function( value ) {
-          if ( value < 99 ) {
-            return Math.floor( value * 1000 ) + ' N';
-          } else if ( value < 9900 ) {
-            return Math.floor( value ) + ' KN';
-          } else {
-            return Math.floor( value / 1000 ) + ' MN';
-          }
-        }
-      }
-    }]
-  },
-};
-
-var myBubbleChart = new Chart(document.getElementById("engineChart0"),{
-    type: 'bubble',
-    data: data0,
-    options: options
-});
-var myBubbleChart = new Chart(document.getElementById("engineChart1"),{
-    type: 'bubble',
-    data: data1,
-    options: options
-});
-var myBubbleChart = new Chart(document.getElementById("engineChart2"),{
-    type: 'bubble',
-    data: data2,
-    options: options
-});
-  </script>
+  <!-- Chart rendering script (canvas) -->
+  <script src="./charts.js"></script>
+  <!-- Legends rendering script (HTML5) -->
+  <script src="./legends.js"></script>
 </body>
 </html>
