Include less.js through whatever the browser decides

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- These is our main stylesheet -->
   <link rel="stylesheet/less" type="text/css" src="./styles.less" />
   <!-- This script takes care of compiling the less stylesheet on the browser -->
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.1/less.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.7.1/less.min.js"></script>
 
   <!-- This script takes care of rendering the chart -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.js" integrity="sha256-1qeNeAAFNi/g6PFChfXQfa6CQ8eXoHXreohinZsoJOQ=" crossorigin="anonymous"></script>
