Correctly include css file and remove debug only styl

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <!-- These is our main stylesheet -->
-  <link type="text/css" src="./assets/build/css/styles.css" />
+  <link rel="stylesheet" type="text/css" href="./assets/build/css/styles.css">
 
   <!-- This script takes care of rendering the chart -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.js" integrity="sha256-1qeNeAAFNi/g6PFChfXQfa6CQ8eXoHXreohinZsoJOQ=" crossorigin="anonymous"></script>
